# Jepa_Experiments

./: .gitattributes  .gitignore  AGENTS.md  README.md  mlflow.db  pyproject.toml  rd-jepa-technical-specification.md
docs/: .$architecture.drawio.bkp  architecture.drawio  architecture.tex
experiments/ck_jepa/: config.py  losses.py  train.py
experiments/ck_jepa/data/: forecasting.py
experiments/ck_jepa/eval/: __init__.py
experiments/ck_jepa/models/: ts_exp_jepa.py
experiments/ck_jepa/viz/: mlflow_logger.py
rd_jepa/: config.py  losses.py  train.py
rd_jepa/data/: loader.py  phyre_env.py
rd_jepa/eval/: __init__.py  forecast_probe.py  probe.py  probe_module.py
rd_jepa/models/: action_encoder.py  deliberation.py  ema.py  encoder.py  rd_jepa.py  resonator.py
rd_jepa/viz/: aim_logger.py  decoder.py  gif_writer.py  mlflow_logger.py
scripts/: build_cache.py  build_data.py  convert_movi.py  download_jena.py  optuna_search.py  render_rollout.py  run_ablations.py  setup_phyre_venv.sh  smoke.py  train.py  train_rdjepa.py  visualize.py
tests/: test_data.py  test_early_exit.py  test_losses.py  test_model.py  test_movi_pipeline.py  test_rd_jepa_pipeline.py  test_viz.py
ts_exp_jepa/: train.py
ts_exp_jepa/eval/: __init__.py
ts_exp_jepa/models/: patch_encoder.py
ts_exp_jepa/viz/: dashboards.py
