[project]
name = "rd-jepa"
version = "0.1.0"
description = "Recurrent Deliberation JEPA — latent-space world model with test-time iterative refinement on PhyRE"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.2,<2.5",
    "numpy>=1.24,<2.0",
    "aim>=3.20",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
# PyPI is the default index; CUDA 12.1 wheels for the RTX 3070 (Ampere) come
# from the PyTorch index. Marked explicit so aim/phyre/etc. still resolve.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rd_jepa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
