[project]
name = "rd-jepa"
version = "0.5.0"
description = "Resonant Decomposition JEPA — coupled-oscillator latent world model for multivariate time-series forecasting"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.2,<2.5",
    "numpy>=1.24,<2.0",
    "tqdm>=4.66",
    "optuna>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.0",
]
optuna = [
    "optuna>=3.6",
    "mlflow>=2.12",
    "optuna-dashboard>=0.3",
]

[tool.uv]
# PyPI is the default index; CUDA 12.1 wheels for the RTX 3070 (Ampere) come
# from the PyTorch index. Marked explicit so optional deps still resolve.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rd_jepa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
